services/k8s/seafile/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
      - name: seafile
        image: seafileltd/seafile-mc:11.0-latest
        ports:
        - containerPort: 80
          name: http
        - containerPort: 8082
          name: fileserver
        volumeMounts:
        - name: seafile-data
          mountPath: /shared
        livenessProbe:
          httpGet:
            path: /accounts/login/
            port: 80
          initialDelaySeconds: 180
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /accounts/login/
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.33.14
        command:
          - /cloud_sql_proxy
          - -dir=/cloudsql
          - -instances=j15rpersonal:us-central1:j15r-mysql=tcp:3306
          - -credential_file=/secrets/cloudsql/credentials.json
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
        - name: cloudsql
          mountPath: /cloudsql
      - name: memcached
        image: memcached:1.6-alpine
        command: ["memcached", "-m", "256"]
        ports:
        - containerPort: 11211
          name: memcached
      volumes:
      - name: seafile-data
        persistentVolumeClaim:
          claimName: seafile-pvc
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: cloudsql
        emptyDir: {}
