services/k8s/seafile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile-service
  annotations:
    cloud.google.com/backend-config: '{"default": "seafile-backend-config"}'
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: seafile
