services/k8s/seafile/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "seafile-ip"
    networking.gke.io/managed-certificates: "seafile-cert"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "seafile-frontend-config"
spec:
  rules:
  - host: files.j15r.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: seafile-service
            port:
              number: 80
